# layout-aware-document-intelligence-refinery

./: .gitignore  .pre-commit-config.yaml  Document_Refinery_Test.ipynb  QUERY_AGENT_SETUP.md  QUICK_START_QUERY.md  README.md  SETUP_CHROMADB.md  pyproject.toml  test_pageindex_builder.ipynb  test_semantic_chunking.ipynb  test_stage2_extraction.py
.refinery/: extraction_ledger.jsonl
.refinery/analyses/: fta_performance_survey_final_report_2022_analysis.json
.refinery/pageindex/: 2018_Audited_Financial_Statement_Report_pageindex.json
.refinery/profiles/: 2019_Audited_Financial_Statement_Report.json  886231c799811c04.json  Annual_Report_JUNE-2023.json  CBE_ANNUAL_REPORT_2023-24.json  a4e997f3b3099d44.json  c4c48b4af39979e6.json  ec606a27ffa2d382.json
Document-intelligence-refinery/: .env.old.utf16  .gitignore  README.md  pyproject.toml
Document-intelligence-refinery/config/: extraction_rules.yaml  model_config.yaml
Document-intelligence-refinery/docs/: LAYOUT_EXTRACTION_SETUP.md
Document-intelligence-refinery/src/: __init__.py
Document-intelligence-refinery/src/agents/: __init__.py  chunker.py  domain_classifier.py  extractor.py  indexer.py  query_agent.py  triage.py
Document-intelligence-refinery/src/db/: __init__.py  fact_table.py  vector_store.py
Document-intelligence-refinery/src/models/: __init__.py  common.py  document_profile.py  extracted_document.py  extraction_ledger.py
Document-intelligence-refinery/src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
Document-intelligence-refinery/src/utils/: __init__.py  language.py  ledger.py  rules.py
Document-intelligence-refinery/streamlit_app/components/: __init__.py
Document-intelligence-refinery/streamlit_app/pages/: 3_PageIndex.py  __init__.py  extraction_page.py  triage_page.py
demo/: README.md  ensure_profiles.py  interim_demo.py  query_agent_demo.py
docs/: COLAB_SETUP.md  DEMO.md  DOMAIN_NOTES.md  INTERIM_REPORT.md
notebooks/: character_density_example.py  test_fast_text_extractor.ipynb  test_fast_text_manual.py  test_layout_extractor_docling.ipynb  test_layout_extractor_mineru.ipynb  test_vision_extractor.ipynb
notebooks/.refinery/profiles/: 2018_Audited_Financial_Statement_Report.json  2021_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2023.json  CBE Annual Report 2006-7 .json  CBE_ANNUAL_REPORT_2023-24.json  EthSwitch-10th-Annual-Report-202324.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json
outputs/: 2018_Audited_Financial_Statement_Report_chunks.json  2018_Audited_Financial_Statement_Report_chunks.md  2018_Audited_Financial_Statement_Report_extracted.json  2018_Audited_Financial_Statement_Report_extracted.md  2018_Audited_Financial_Statement_Report_pageindex.md  2018_Audited_Financial_Statement_Report_pageindex_summary.json  2018_Audited_Financial_Statement_Report_validation.json  2019_Audited_Financial_Statement_Report_extracted.json
outputs/docling/markdown/2018_Audited_Financial_Statement_Report_20260306_180437/: 2018_Audited_Financial_Statement_Report.md  metadata.txt
outputs/mineru/2018_Audited_Financial_Statement_Report/hybrid_auto/: 2018_Audited_Financial_Statement_Report.md  2018_Audited_Financial_Statement_Report_content_list.json  2018_Audited_Financial_Statement_Report_content_list_v2.json  2018_Audited_Financial_Statement_Report_middle.json  2018_Audited_Financial_Statement_Report_model.json
outputs/vision_extraction/2018_Audited_Financial_Statement_Report_20260306_182949/: 2018_Audited_Financial_Statement_Report_summary.txt  2018_Audited_Financial_Statement_Report_vision.md
rubric/: extraction_rules.yaml
scripts/: generate_mineru_json.py  phase0_docling.py  phase0_pdfplumber_analysis.py  phase1_triage_matrix.py  phase2_extraction_matrix.py  phase4_query_demo_matrix.py
src/agents/: __init__.py  chunker.py  domain_classifier.py  extractor.py  indexer.py  query_agent.py  query_tools.py  triage.py
src/models/: __init__.py  common.py  document_profile.py  extracted_document.py  extraction_ledger.py  ldu.py  page_index.py  pageindex.py  provenance.py  query.py
src/services/: docling_adapter.py  fact_extractor.py  fact_table.py  model_gateway.py  surya_ocr.py  tracing.py  vector_store.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  layout_aware.py  layout_mineru.py  router.py  vision.py  vision_augmented.py
src/utils/: __init__.py  adapters.py  budget_guard.py  character_density_analyzer.py  chunk_validator.py  confidence_scorer.py  content_hasher.py  fact_table.py  figure_chunker.py  language.py  ledger.py  list_chunker.py  query_helpers.py  reference_resolver.py  rules.py  section_chunker.py  table_chunker.py  token_counter.py  vector_store.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: base.html  chunk_detail.html  chunks.html  extraction.html  index.html  ledger.html  query.html  triage.html  validation.html
streamlit_app/: app.py
streamlit_app/components/: document_viewer.py  provenance_display.py
streamlit_app/pages/: 4_Query.py  extraction_page.py  triage_page.py
tests/: test_all_classes.py  test_extractors.py  test_query_provenance_contract.py  test_router_escalation.py  test_triage.py
tests/integration/: test_audit_mode.py  test_extraction_ledger_artifact.py  test_langgraph_query_flow.py  test_model_override_flow.py  test_pageindex_vector_flow.py  test_pipeline_smoke.py  test_triage_profile_artifact.py
tests/unit/: test_chunk_validator.py  test_chunking_engine.py  test_confidence_scoring.py  test_domain_classifier.py  test_extracted_document_models.py  test_extraction_ledger.py  test_fact_extractor.py  test_indexer_enrichment.py  test_language_detection.py  test_model_selector.py  test_pageindex_ranking.py  test_triage.py
