[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layout-aware-document-intelligence-refinery"
version = "0.1.0"
description = "Production-grade, multi-stage agentic pipeline for document extraction with provenance tracking"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FDE Program", email = "fde@example.com"}
]
keywords = ["document-intelligence", "pdf-extraction", "rag", "provenance", "agentic-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.8.0",
    
    # Document processing
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    
    # ML/AI dependencies
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.20",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    
    # Vector stores
    "chromadb>=0.4.0",
    "sentence-transformers>=2.3.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    
    # Database (sqlite3 is built-in, but we use sqlalchemy for ORM)
    "sqlalchemy>=2.0.0",
    
    # API clients
    "openrouter>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

ml = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    # Note: docling and mineru may need to be installed separately
    # docling: https://github.com/DS4SD/docling
    # mineru: https://github.com/opendatalab/MinerU
]

[project.urls]
Homepage = "https://github.com/example/document-intelligence-refinery"
Documentation = "https://github.com/example/document-intelligence-refinery/docs"
Repository = "https://github.com/example/document-intelligence-refinery"
Issues = "https://github.com/example/document-intelligence-refinery/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pymupdf.*",
    "chromadb.*",
    "docling.*",
    "mineru.*",
    "openrouter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
